# game-launcher

./: .gitignore  CMakeLists.txt  Gemini.md  README.md
.github/workflows/: release.yml
include/: app.hpp  cli_args.hpp  command_dispatcher.hpp  command_handlers.hpp  console_ui.hpp  library.hpp
scripts/: build-release.ps1  install-campfire.bat  install-campfire.ps1  install-from-github.ps1  package-release.ps1
src/: app.cpp  cli_args.cpp  command_dispatcher.cpp  command_handlers.cpp  console_ui.cpp  library.cpp  main.cpp
tests/: campfire_tests.cpp
ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
